# rust-rest-api

./: .env.example  Cargo.toml  README.md  docker-compose.yaml  lines.txt  users.json
migrations/2025-05-05-131527_create_users_table/: up.sql
src/: environment.rs  errors.rs  lib.rs  main.rs  models.rs  schema.rs
src/middlewares/: auth.rs  error.rs
src/routes/: mod.rs  ping_pong.rs  user.rs
src/scopes/user/: handlers.rs  mod.rs  service.rs  types.rs
